2010-10-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Add a 'return' for every usage() call.
	  Add step in main.

2010-10-01  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amvault.8.xml: mention that DLE splitting parameters
	  are ignored by amvault
	* server-src/amvault.pl: use tapetype parameters for splitting
	* perl/Amanda/Taper/Scribe.pm: support splitting parameters straight
	  from Amanda::Config

2010-10-01  Dustin J. Mitchell <dustin@zmanda.com>
	* packaging/deb/rules: remove misleading comment about automake-1.2

2010-10-01  Dustin J. Mitchell <dustin@zmanda.com>
	* contrib/convert-zd-mtx-to-robot.sh: set default for driveslot, ask
	  user to clear out 'tapedev' too

2010-09-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/event.c: Set the priority of EV_TIME to 10.

2010-09-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/postscript.pm: print all dles that have a part
	  on the volume.
	* installcheck/catalogs/spanned.cat: Check it.

2010-09-30  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Taper/Scan/traditional.pm: use set_current in stage 1,
	  too

2010-09-29  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/dumper.c: fix prints; use the correct disk_t fields

2010-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/alloc.c: Remove a print to stderr.

2010-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS, ReleaseNotes: Update.

2010-09-28  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amvault.pl: fix tests for total size

2010-09-28  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/util.c: remove debugging call
	* installcheck/Amanda_Util.pl: fix tests on perl-5.6

2010-09-28  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amvault.pl: print total size on --dry-run

2010-09-28  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Config.pl: fix test

2010-09-28  Dustin J. Mitchell <dustin@zmanda.com>