@@ -1,3 +1,8 @@
+2010-10-04  Dustin J. Mitchell <dustin@zmanda.com>
+	* perl/Amanda/Report.pm: fix autovivification bug
+	* perl/Amanda/Report/human.pm: detect re-flushing; fix a lot of 
+	  undefined's
+
 2010-10-04  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amtape.pl: Add a 'return' for every usage() call.
 	  Add step in main.
